<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Programme" Id="{fd56f92a-e4f8-4a47-9706-fb5511ecb93a}">
    <Declaration><![CDATA[TYPE ST_Programme :
STRUCT
	nNr:			INT;
	sName:			STRING;
	aAktorBew:		ARRAY [1..Parameter.cAnzSchritte] OF ST_Ablauf_Konfig;
	aAktorKonfig:	ARRAY [1..Parameter.cAnzAktoren] OF ST_Aktor_Konfig;
	nTeilAnw:			INT;
	nFussschalterAktiv: INT;			// 0 = Ja / 1 = Nein
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>